Terraform_Resources/Resource_Meta_Argument/Terraform-Manifests/Resource meta-Arguments-depends_on/Terraform-manifests/c4-elastic-ip.tf
# Resource-9: Create Elastic IP
resource "aws_eip" "my-eip" {
  instance = aws_instance.my-ec2-vm.id
  vpc      = true
  # Meta-Argument Depends_on
  depends_on = [aws_internet_gateway.vpc-dev-igw]
}
