Terraform_Resources/Resource_Meta_Argument/Terraform-Manifests/Resource meta-Arguments-depends_on/Terraform-manifests/c2-vpc.tf
#Resource Block

#important URL - https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway

#Resource -1 : Create VPC

resource "aws_vpc" "vpc-dev" {

cidr_block = "10.0.0.0/16"
tags = {

"Name" = "vpc-dev"
}
}

#Resource-2 :Create subnet 
resource "aws_subnet" "vpc-dev-public-subnet-1" {
  vpc_id     = aws_vpc.vpc-dev.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = "true"

# map_public_ip_on_launch = Specify true to indicate that instances launched into the subnet should be assigned a public IP address. Default is false.

}

#Resource-3 :   Internet Gateway
resource "aws_internet_gateway" "aws-dev-ipv" {
  vpc_id = aws_vpc.vpc-dev.id

}

# Resource-4: Create Route Table
resource "aws_route_table" "vpc-dev-public-route-table" {
  vpc_id = aws_vpc.vpc-dev.id
}

# Resource-5: Create Route in Route Table for Internet Access
resource "aws_route" "vpc-dev-public-route" {
  route_table_id         = aws_route_table.vpc-dev-public-route-table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.vpc-dev-igw.id
}

# Resource-6: Associate the Route Table with the Subnet
resource "aws_route_table_association" "vpc-dev-public-route-table-associate" {
  route_table_id = aws_route_table.vpc-dev-public-route-table.id
  subnet_id      = aws_subnet.vpc-dev-public-subnet-1.id
}

# Resource-7: Create Security Group

resource "aws_security_group" "dev-vpc-sg"{

    name        = "dev-vpc-default-sg"
    description = "Dev VPC default Security Group"
    vpc_id      = aws_vpc.vpc-dev.id

    ingress { 

            description = "Allow port 22"
            from_port   = 22
            to_port     = 22
            protocol    = "tcp"
            cidr_block  = ["0.0.0.0/0"]
            }
            ingress {
                    description = "Allow Port 80"
                    from_port   = 80
                    to_port     = 80
                    protocol    = "tcp"
                    cidr_blocks = ["0.0.0.0/0"]
                    }
    egress {
            description = "Allow all IP and Ports Outbound"
            from_port   = 0
            to_port     = 0
            protocol    = "-1"
            cidr_blocks = ["0.0.0.0/0"]
            }
}
